--- a/styles.css
+++ b/styles.css
@@ -112,7 +112,7 @@ dl {
     position: absolute;
     left: 50%;
     bottom: 20;
-    background-color:none;
+    background-color: rgba(255,255,255, 0);
     
  }
 
